<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".tab1_fragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="503dp"
            android:layout_gravity="center"
            android:layoutDirection="inherit"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="503dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/banner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcomeHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_marginTop="50dip"
                    android:layout_marginEnd="50dip"
                    android:layout_marginBottom="10dip"
                    android:background="#FFFFFF"
                    android:fontFamily="sans-serif-black"
                    android:gravity="start|left|center_vertical"
                    android:padding="20dip"
                    android:text="@string/welcome_heading"
                    android:textColor="#000000"
                    android:textSize="45sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/WelcomeHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginEnd="10dip"
                    android:layout_marginBottom="10dip"
                    android:background="#FFFFFF"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="start|center_vertical"
                    android:padding="15dip"
                    android:text="@string/welcome_sub_heading"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/btn_redirect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_pill"
                    android:onClick="redirectToAllDocs"
                    android:paddingStart="30dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="10dp"
                    android:text="@string/find_docs"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/current_appointments_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/current_appointments"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="351dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>