<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tab3_fragment"
    android:orientation="horizontal">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ärzteformular"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue"
                app:endIconTint="@color/blue"
                app:hintTextColor="@color/blue"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titelInp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Titel"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue"
                app:endIconTint="@color/blue"
                app:hintTextColor="@color/blue"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vnameInp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Vorname*"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue"
                app:endIconTint="@color/blue"
                app:hintTextColor="@color/blue"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nnameInp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Nachname*"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue"
                app:endIconTint="@color/blue"
                app:hintTextColor="@color/blue"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adressInp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Adresse*"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue"
                app:endIconTint="@color/blue"
                app:hintTextColor="@color/blue"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneInp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Telefonnummer*"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue"
                app:endIconTint="@color/blue"
                app:hintTextColor="@color/blue"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EMailInp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="E-Mail*"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue"
                app:endIconTint="@color/blue"
                app:hintTextColor="@color/blue"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Website*"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue"
                app:endIconTint="@color/blue"
                app:hintTextColor="@color/blue"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fachrichtungInp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Fachrichtung*"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue"
                app:endIconTint="@color/blue"
                app:hintTextColor="@color/blue"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kurzbeschreibung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Kurzbeschreibung*"
                    android:textColor="@color/blue"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue"
                app:endIconTint="@color/blue"
                app:hintTextColor="@color/blue"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/erzählenInp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Erzählen Sie etwas über sich*"
                    android:singleLine="false"
                    android:textColor="@color/blue"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:id="@+id/kassen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kassen"
                    android:textColor="@color/blue"
                    android:paddingTop="5dp"
                    android:textSize="18sp" />

                <CheckBox android:id="@+id/svs1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/svs1"
                    android:onClick="onCheckboxClicked"/>

                <CheckBox android:id="@+id/svs2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/svs2"
                    android:onClick="onCheckboxClicked"/>

                <CheckBox android:id="@+id/svs3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/svs3"
                    android:onClick="onCheckboxClicked"/>

                <CheckBox android:id="@+id/svs4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/svs4"
                    android:onClick="onCheckboxClicked"/>

                <Button
                    android:id="@+id/formBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:drawableRight="@android:drawable/ic_menu_send"
                    android:text="Absenden" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>